# Lab-2_Infra_and_Docker

./: .env  .example.env  .flake8  Dockerfile.txt  Makefile  README.md  Task.md  example.env  lab2.md  lint  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
Infrastructure/: Docker_compose.local.yaml  Docker_compose.yaml  Dockerfile  commands  docker-compose.local.yaml  docker-compose.yaml
app/api/: routers.py
app/api/endpoints/: __init__.py  cadastr.py
app/core/constants/: base.py  mime.py
docs/: service_part.md
infranstucture/: docker-compose.yaml
infrastructure/: DockerFile  Dockerfile  Dockerfile.txt  Documentation.md  README.md  docker-compose.local.yaml  docker-compose.local.yaml.txt  docker-compose.yaml  docker-compose.yaml.txt
infrastructure/app/: main.py  tasks.py  worker.py
infrastructure/app/api/: routers.py
infrastructure/app/api/endpoints/: cadastr.py  ping.py
infrastructure/app/core/: db.py  settings.py
infrastructure/app/core/constants/: regexes.py
infrastructure/app/core/schemas/: __init__.py  cadastr.py
infrastructure/app/services/clients/: base.py  cadastr_client.py
infrastructure/data/: postmaster.pid
infrastructure/data/base/1/: 2619  pg_internal.init
infrastructure/data/base/16384/: 2619
infrastructure/data/base/5/: 2619  pg_internal.init
infrastructure/data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
infrastucture/: Dockerfile  docker-compose.local.yaml  docker-compose.yaml
src/infrastructure/: Dockerfile.txt  docker-compose.yaml
